[gd_scene load_steps=3 format=3 uid="uid://dpxujp853xy2x"]

[ext_resource type="Script" path="res://addons/settingGen/Editor/ProjectSettingEditor.gd" id="1_ykj53"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_re1x3"]
border_width_left = 1
border_width_right = 1

[node name="ProjectSettingEditor" type="Control"]
custom_minimum_size = Vector2(0, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_ykj53")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActiveProjectSettingList" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/ActiveProjectSettingList"]
layout_mode = 2
mouse_filter = 1
text = "Custom Settings File:"

[node name="SettingList" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/SettingList"]
layout_mode = 2

[node name="Tree" type="Tree" parent="Layout/SettingList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Layout/SettingList/VBoxContainer"]
layout_mode = 2
text = "Add on selected layer"

[node name="VBoxContainer2" type="VBoxContainer" parent="Layout/SettingList"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/SettingList/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/SettingList/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/SettingList/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Layout/SettingList/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Selected Setting"
horizontal_alignment = 1

[node name="Label2" type="LineEdit" parent="Layout/SettingList/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(301, 0)
layout_mode = 2
placeholder_text = "Setting Name"

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/SettingList/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label3" type="Label" parent="Layout/SettingList/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Setting Type   "

[node name="OptionButton" type="OptionButton" parent="Layout/SettingList/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
item_count = 37
popup/item_0/text = "Nil"
popup/item_0/id = 0
popup/item_1/text = "bool"
popup/item_1/id = 1
popup/item_2/text = "int"
popup/item_2/id = 2
popup/item_3/text = "float"
popup/item_3/id = 3
popup/item_4/text = "String"
popup/item_4/id = 4
popup/item_5/text = "Vector2"
popup/item_5/id = 5
popup/item_6/text = "Vector2i"
popup/item_6/id = 6
popup/item_7/text = "Rect2"
popup/item_7/id = 7
popup/item_8/text = "Rect2i"
popup/item_8/id = 8
popup/item_9/text = "Vector3"
popup/item_9/id = 9
popup/item_10/text = "Vector3i"
popup/item_10/id = 10
popup/item_11/text = "Transform2D"
popup/item_11/id = 11
popup/item_12/text = "Vector4"
popup/item_12/id = 12
popup/item_13/text = "Vector4i"
popup/item_13/id = 13
popup/item_14/text = "Plane"
popup/item_14/id = 14
popup/item_15/text = "Quaternion"
popup/item_15/id = 15
popup/item_16/text = "AABB"
popup/item_16/id = 16
popup/item_17/text = "Basis"
popup/item_17/id = 17
popup/item_18/text = "Transform3D"
popup/item_18/id = 18
popup/item_19/text = "Projection"
popup/item_19/id = 19
popup/item_20/text = "Color"
popup/item_20/id = 20
popup/item_21/text = "StringName"
popup/item_21/id = 21
popup/item_22/text = "NodePath"
popup/item_22/id = 22
popup/item_23/text = "RID"
popup/item_23/id = 23
popup/item_24/text = "Object"
popup/item_24/id = 24
popup/item_25/text = "Callable"
popup/item_25/id = 25
popup/item_26/text = "Signal"
popup/item_26/id = 26
popup/item_27/text = "Dictionary"
popup/item_27/id = 27
popup/item_28/text = "Array"
popup/item_28/id = 28
popup/item_29/text = "PackedByteArray"
popup/item_29/id = 29
popup/item_30/text = "PackedInt32Array"
popup/item_30/id = 30
popup/item_31/text = "PackedInt64Array"
popup/item_31/id = 31
popup/item_32/text = "PackedFloat32Array"
popup/item_32/id = 32
popup/item_33/text = "PackedFloat64Array"
popup/item_33/id = 33
popup/item_34/text = "PackedStringArray"
popup/item_34/id = 34
popup/item_35/text = "PackedVector2Array"
popup/item_35/id = 35
popup/item_36/text = "PackedVector3Array"
popup/item_36/id = 36

[node name="VSeparator" type="VSeparator" parent="Layout/SettingList/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_re1x3")
